attempt to solve header offset 2

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ header {
     display: flex; 
     flex-direction: column;
     align-items: center; 
+    justify-content: center;
 }
 
 .nav_links {
@@ -72,14 +73,18 @@ a {
     header {
         flex-direction: row;
         justify-content: space-between;
+        position: sticky;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
     }
     .nav_links {
         flex-direction: row;
     }
-    body > header {
-        position: sticky;
-        top: 0;
-        width: 100%;
+    .card header {
+        position: static;
     }
     .card {
         flex-basis: 250px;
@@ -88,7 +93,7 @@ a {
 
 @media screen and (prefers-reduced-motion: reduce) {
     #logo {
-        animation-delay: -20s;
+        animation: none;
     }
 }
 
